# BMSTU-NET-CP

./: CMakeLists.txt  client.c  main.c
docs/: analysis.tex  conclusion.tex  design.tex  imp.tex  introd.tex  lib.tex  report.tex  research.tex
http/: content_type.c  content_type.h  http_err.h  log.c  log.h  net.c  net.h  request.c  responses_str.h  server.c  server.h
log/: log.h
src/: CMakeLists.txt  main.c
src/http/: content_type.h  net.c  request.c  request.h  server.c  server.h
src/log/: log.c
src/root/: index.html
src/tpool/: queue.h  task.h  tpool.c
tpool/: queue.c  queue.h  task.h  tpool.c  tpool.h  tpool_err.h
